# facedetection

./: .gitignore  CMakeLists.txt  README.md
include/: Tracker.hpp  config.hpp  facedetector.hpp
src/: CMakeLists.txt  Tracker.cpp  facedetector.cpp
src/samples/: CMakeLists.txt  face_landmark_detection_ex.cpp  image_detection.cpp  video_tracking.cpp
src/tests/: CMakeLists.txt  config_test.cpp  facedetection_test.cpp
